{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 16,
  "lineage": "8308c2fc-4894-9188-2e3b-78b22ac055f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dacb0c129b49f529",
            "arn": "arn:aws:ec2:us-east-2:482360187286:instance/i-088488411a8c6065a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-088488411a8c6065a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DEMOKP",
            "monitoring": false,
            "primary_network_interface_id": "eni-014727d2b52a1fc3d",
            "private_dns": "ip-192-168-1-10.us-east-2.compute.internal",
            "private_ip": "192.168.1.10",
            "public_ip": "18.221.255.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0603fdd602ee72c7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d812d3856b0658cb",
            "tags": {
              "Name": "WebApp1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048d1b96fa19d8e86"
            ]
          },
          "dependencies": [
            "aws_security_group.WebServer",
            "aws_subnet.PublicAZA",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dacb0c129b49f529",
            "arn": "arn:aws:ec2:us-east-2:482360187286:instance/i-017398af7620a60d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-017398af7620a60d0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DEMOKP",
            "monitoring": false,
            "primary_network_interface_id": "eni-0993e4644bf8fb7fd",
            "private_dns": "ip-192-168-3-249.us-east-2.compute.internal",
            "private_ip": "192.168.3.249",
            "public_ip": "18.189.143.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d74533de0a0a5740",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c761a2b0cc45260",
            "tags": {
              "Name": "WebApp2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048d1b96fa19d8e86"
            ]
          },
          "dependencies": [
            "aws_security_group.WebServer",
            "aws_subnet.PublicAZB",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c16a47c37906873d",
            "owner_id": "482360187286",
            "tags": {
              "Name": "IGW-MainVPC-Ohio"
            },
            "vpc_id": "vpc-07d10f01d35ed87cb"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-011939890984b28c0",
            "owner_id": "482360187286",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-07d10f01d35ed87cb"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ec13776c8b473b8",
            "owner_id": "482360187286",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c16a47c37906873d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-07d10f01d35ed87cb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fba280ab6f50aee9",
            "route_table_id": "rtb-011939890984b28c0",
            "subnet_id": "subnet-0752df2a20021b52a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.PrivateAZA",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a1c2ad61a9b5158",
            "route_table_id": "rtb-011939890984b28c0",
            "subnet_id": "subnet-087effc096ec7ecad"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.PrivateAZB",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6164a0e6aef7896",
            "route_table_id": "rtb-03ec13776c8b473b8",
            "subnet_id": "subnet-0d812d3856b0658cb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.PublicAZA",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0544fd33edc108d2c",
            "route_table_id": "rtb-03ec13776c8b473b8",
            "subnet_id": "subnet-07c761a2b0cc45260"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.PublicAZB",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:482360187286:security-group/sg-048d1b96fa19d8e86",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048d1b96fa19d8e86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServer",
            "name_prefix": null,
            "owner_id": "482360187286",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d10f01d35ed87cb"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:482360187286:subnet/subnet-0752df2a20021b52a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0752df2a20021b52a",
            "map_public_ip_on_launch": false,
            "owner_id": "482360187286",
            "tags": {
              "Name": "2a-PrivateSubnet"
            },
            "vpc_id": "vpc-07d10f01d35ed87cb"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:482360187286:subnet/subnet-087effc096ec7ecad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-087effc096ec7ecad",
            "map_public_ip_on_launch": false,
            "owner_id": "482360187286",
            "tags": {
              "Name": "2b-PrivateSubnet"
            },
            "vpc_id": "vpc-07d10f01d35ed87cb"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:482360187286:subnet/subnet-0d812d3856b0658cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0d812d3856b0658cb",
            "map_public_ip_on_launch": false,
            "owner_id": "482360187286",
            "tags": {
              "Name": "2a-PublicSubnet"
            },
            "vpc_id": "vpc-07d10f01d35ed87cb"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:482360187286:subnet/subnet-07c761a2b0cc45260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-07c761a2b0cc45260",
            "map_public_ip_on_launch": false,
            "owner_id": "482360187286",
            "tags": {
              "Name": "2b-PublicSubnet"
            },
            "vpc_id": "vpc-07d10f01d35ed87cb"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:482360187286:vpc/vpc-07d10f01d35ed87cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0adcce5f2d91db8bf",
            "default_route_table_id": "rtb-02b5364b8640899de",
            "default_security_group_id": "sg-02f5f62cb59e79002",
            "dhcp_options_id": "dopt-5053803b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07d10f01d35ed87cb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b5364b8640899de",
            "owner_id": "482360187286",
            "tags": {
              "Name": "MainVPC-Ohio"
            }
          }
        }
      ]
    }
  ]
}